# westerngate

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yaml  init-letsencrypt.sh
backend/: backend.py  database.py  pyproject.toml
calculate_arbitrage/: calculate.py  database.py  dex_scraper.py  path_arb.py  path_builder.py  pyproject.toml  reserve_tokens.json  subgraphs.json  worker.py
frontend/: index.html  update_token_icons.py
