[tool.poetry]
name = "arb-backend"
version = "0.1.0"
description = "Backend for displaying arb data"
authors = ["Alex Norell <3845666+alexnorell@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.3"
redis = "^3.5.3"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
