[tool.poetry]
name = "calculate_arbitrage"
version = "0.1.0"
description = "Calcualte arbitrage events and store them to redis"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gql = {version = "3.0.0a6", extras = ["aiohttp"]}
logzero = "^1.7.0"
redis = "^3.5.3"
numpy = "^1.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
